# houdini-mcp

./: .gitignore  .mcp.json  BEST_PRACTICES.md  CLAUDE.md  README.md  bootstrap.sh  hip_parser.py  hip_patterns.py  houdini_mcp_server.py  houdini_rag.py  pyproject.toml
docs/: GUIDE_GETTING_STARTED.md  GUIDE_TERMINAL.md  TROUBLESHOOTING.md  hip_format.md
docs/roadmaps/: ROADMAP_HIP_INGEST.md  ROADMAP_WORKFLOW_INSTRUCTIONS.md
scripts/: annotate_patterns.py  extract_hdas.py  headless_server.py  hip_patterns.py  ingest_hips.py  install.py  parse_hips.py
skills/: retarget-fx-shot.md
src/houdinimcp/: HoudiniMCPRender.py  __init__.py  claude_terminal.py  event_collector.py  houdinimcp.shelf  server.py
src/houdinimcp/handlers/: animation.py  cache.py  chops.py  code.py  context.py  cops.py  dops.py  geometry.py  hda.py  lop.py  materials.py  nodes.py  parameters.py  rendering.py  takes.py  vex.py  viewport.py  workflow.py
tests/: test_animation_handlers.py  test_bridge_connection.py  test_cache_handlers.py  test_chops_handlers.py  test_context_handlers.py  test_cops_handlers.py  test_dops_handlers.py  test_geometry_expanded.py  test_hip_parser.py  test_hip_patterns.py  test_houdini_rag.py  test_ingest_hips.py  test_ingest_serve.py  test_lop_expanded.py  test_materials_handlers.py  test_monitor_render.py  test_nodes_expanded.py  test_parameter_handlers.py  test_parse_hips.py  test_rendering_expanded.py  test_server_commands.py  test_takes_handlers.py  test_terminal.py  test_vex_handlers.py  test_viewport_handlers.py  test_workflow_handlers.py
