[project]
name = "houdinimcp"
version = "0.1.0"
description = "MCP bridge connecting SideFX Houdini to Claude AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/houdinimcp"]

[project.scripts]
houdinimcp-bridge = "houdini_mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
